fix: Move collapse Read More linkbelow text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -532,7 +532,7 @@ footer form input:hover{
     border-radius: 22px;
     color: #fff;
     background-color: #F47A60;
-    border: #35798e 3px solid;
+    border: #35798e 1px solid;
 } 
 
 /* ******************************************** Media Queries for index.html */
